Add basics for mocha testing

--- a/package.json
+++ b/package.json
@@ -22,9 +22,16 @@
     "commander": "*",
     "request": "*"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "mocha": "*",
+    "should": "*",
+    "coffee-script": "*"
+  },
   "optionalDependencies": {},
   "engines": {
     "node": "*"
+  },
+  "scripts": {
+    "test": "mocha"
   }
 }
