Can't drop coffee-script, it's actually a devDependency!

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   },
   "devDependencies": {
     "mocha": "*",
-    "should": "*"
+    "should": "*",
+    "coffee-script": "~1.6.3"
   },
   "optionalDependencies": {},
   "engines": {
