--- a/package.json
+++ b/package.json
@@ -29,15 +29,20 @@
     "request": "~2.30.0"
   },
   "devDependencies": {
-    "coffee-script": "~1.6.3",
-    "mocha": "~1.15.1",
-    "should": "~2.1.1"
+    "jshint": "^2.5.6",
+    "jscs": "^1.7.1",
+    "lab": "^4.6.2",
+    "hoek": "^2.6.0",
+    "sinon": "^1.10.3"
   },
   "optionalDependencies": {},
   "engines": {
     "node": "*"
   },
   "scripts": {
-    "test": "mocha"
+    "lint": "./node_modules/jshint/bin/jshint lib bin/nma test",
+    "style": "./node_modules/jscs/bin/jscs lib bin/nma test",
+    "test": "./node_modules/lab/bin/lab -c",
+    "ci": "npm run lint && npm run style && npm test"
   }
 }
